--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ function fetchsimpsonsQuoteJSON() {
 
       // Build a block of HTML
       const simpsonsHtml = `
-        <p><strong>${simpsonsQuote.character}</strong></p>
-		<p>${simpsonsQuote.quote}</p>
-		<img src="${simpsonsQuote.image}" />`;
+        <p><strong>${simpsonsQuote[0].character}</strong></p>
+		<p>${simpsonsQuote[0].quote}</p>
+		<img src="${simpsonsQuote[0].image}" />`;
       document.querySelector('#chuck-norris').innerHTML = simpsonsHtml;
     });
 }
