--- a/index.html
+++ b/index.html
@@ -28,19 +28,18 @@
 		integrity="sha256-S1J4GVHHDMiirir9qsXWc8ZWw74PHHafpsHp5PXtjTs=" crossorigin="anonymous"></script>
 	<script>
 	
-// This function loads pokemon data from the Pokemon API
+
 function fetchsimpsonsQuoteJSON() {
-  // Feel free to download this HTML and edit it, to use another Pokemon ID
+
   const quotes = 'quotes';
-  const url = `https://simpsons-quotes-api.herokuapp.com/quotes`;
+  const url = `https://simpsons-quotes-api.herokuapp.com/${quotes}`;
   axios.get(url)
     .then(function(response) {
-      return response.data; // response.data instead of response.json() with fetch
+      return response.data; 
     })
     .then(function(simpsonsQuote) {
       console.log('data decoded from JSON:', simpsonsQuote);
 
-      // Build a block of HTML
       const simpsonsHtml = `
         <p><strong>${simpsonsQuote[0].character}</strong></p>
 		<p>${simpsonsQuote[0].quote}</p>
